[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-document-rag-chatbot"
authors = [
  { name = "Richa Chaudhary", email = "richautd30@gmail.com" }
]
version = "0.1.0"
description = "This is end to end LLMOps project"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.42.21",
    "botocore==1.42.21",
    "certifi==2026.1.4",
    "dill==0.4.0",
    "docx2txt==0.9",
    "faiss-cpu==1.13.2",
    "fastapi==0.128.0",
    "from-root==1.3.0",
    "imblearn==0.0",
    "ipykernel==7.1.0",
    "jinja2==3.1.6",
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.6",
    "langchain-google-genai==4.1.2",
    "langchain-groq==1.1.1",
    "langchain-openai==1.1.6",
    "langsmith==0.6.0",
    "matplotlib==3.10.8",
    "mypy-boto3-s3==1.42.21",
    "numpy==2.4.0",
    "openai==2.14.0",
    "pandas==2.3.3",
    "plotly==6.5.0",
    "pymongo==4.15.5",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "pyyaml==6.0.3",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "structlog==25.5.0",
    "uvicorn==0.40.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]